<?xml version="1.0"?>
<package>
  <name>ur_modern_driver</name>
  <version>0.1.0</version>
  <description>The new driver for Universal Robots UR3, UR5 and UR10 robots with CB2 and CB3 controllers.</description>
  <author>Thomas Timm Andersen</author>
  <author>Simon Rasmussen</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/ur_modern_driver</url>
  <url type="bugtracker">https://github.com/ros-industrial/ur_modern_driver/issues</url>
  <url type="repository">https://github.com/ros-industrial/ur_modern_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>ur_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>ur_msgs</run_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <test_depend>rosunit</test_depend>
</package>
