<?xml version="1.0"?>
<package format="2">
  <name>ur_calibration</name>
  <version>2.1.3</version>
  <description>Package for extracting the factory calibration from a UR robot and change it such that it can be used by ur_description to gain a correct URDF</description>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>ur_client_library</depend>
  <depend>yaml-cpp</depend>
  <depend>ur_robot_driver</depend>


  <test_depend>rosunit</test_depend>
</package>
