<?xml version="1.0"?>
<package format="2">
  <name>ur_calibration</name>
  <version>2.1.5</version>
  <description>Package for extracting the factory calibration from a UR robot and change it such that it can be used by ur_description to gain a correct URDF</description>

  <maintainer email="feex@universal-robots.com">Felix Exner</maintainer>
  <maintainer email="rsk@universal-robots.com">Rune Søe-Knudsen</maintainer>
  <maintainer email="ros@universal-robots.com">Universal Robots A/S</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>ur_client_library</depend>
  <depend>yaml-cpp</depend>
  <depend>ur_robot_driver</depend>


  <test_depend>rosunit</test_depend>
</package>
