<?xml version="1.0"?>
<package format="2">
  <name>ur_dashboard_msgs</name>
  <version>2.1.3</version>
  <description>Messages around the UR Dashboard server.</description>

  <maintainer email="exner@FZI.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>

</package>
