<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ur_lib</name>
  <version>0.0.3</version>
  <description>The new driver for Universal Robots UR3, UR5 and UR10 robots with CB3 controllers and the e-series.</description>
  <author>Thomas Timm Andersen</author>
  <author>Simon Rasmussen</author>
  <author>Felix Exner</author>
  <author>Lea Steffen</author>
  <author>Tristan Schnell</author>
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-2-Clause</license>
  <license>Zlib</license>

  <url type="website">http://wiki.ros.org/ur_lib</url>
  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS_Driver</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
